monitoring/zabbix-web/service/service.yaml
kind: Service
apiVersion: v1
metadata: 
  name: zabbix-web-svc
spec:
  selector:
    app.kubernetes.io/name: zabbix-web
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
